Add starter static website files (index, css, js, README, placeholders)

--- a/index.html
+++ b/index.html
@@ -1,63 +1,93 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shankar Gugoloth</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      display: flex;
-      min-height: 100vh;
-      align-items: center;
-      justify-content: center;
-      background: #f5f5f5;
-    }
-    .card {
-      background: white;
-      padding: 2.5rem 3rem;
-      border-radius: 18px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-      max-width: 640px;
-    }
-    h1 {
-      margin: 0 0 0.25rem;
-      font-size: 2rem;
-    }
-    h2 {
-      margin: 0 0 1rem;
-      font-weight: 400;
-      font-size: 1rem;
-      color: #555;
-    }
-    p {
-      line-height: 1.6;
-      margin: 0 0 1rem;
-    }
-    .links a {
-      margin-right: 1rem;
-      text-decoration: none;
-      font-size: 0.95rem;
-    }
-  </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Shankar Gugoloth — Personal</title>
+  <meta name="description" content="Shankar Gugoloth — software engineer. Projects, blog, and contact." />
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <main class="card">
-    <h1>Your Name</h1>
-    <h2>Anthropology · Education · Caste & Aspirations</h2>
-
-    <p>
-      I am a PhD scholar in Anthropology working on aspirations and education in
-      Telangana’s Social Welfare Residential Schools (TGSWREIS). This site is a
-      simple landing page; more content coming soon.
-    </p>
-
-    <div class="links">
-      <a href="mailto:youremail@example.com">Email</a>
-      <a href="https://scholar.google.com" target="_blank">Google Scholar</a>
-      <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+  <header class="site-header">
+    <div class="container">
+      <a class="brand" href="#home">Shankar Gugoloth</a>
+      <nav class="site-nav" aria-label="Primary">
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+      </nav>
     </div>
+  </header>
+
+  <main>
+    <section id="home" class="hero">
+      <div class="container hero-inner">
+        <div class="hero-content">
+          <h1>Hi — I'm Shankar.</h1>
+          <p class="lead">Software engineer building web apps. I care about clean code, fast UI, and good UX.</p>
+          <p>
+            <a class="btn" href="#projects">See my work</a>
+            <a class="btn btn-outline" href="files/Shankar_Resume.pdf" target="_blank" rel="noopener">Resume</a>
+          </p>
+        </div>
+        <img class="hero-photo" src="images/profile.jpg" alt="Shankar Gugoloth photo" />
+      </div>
+    </section>
+
+    <section id="about" class="section">
+      <div class="container">
+        <h2>About</h2>
+        <p>Short bio — where you work, what you build, what tools you use (JavaScript, TypeScript, React, Node, etc.).</p>
+      </div>
+    </section>
+
+    <section id="projects" class="section">
+      <div class="container">
+        <h2>Projects</h2>
+        <div class="grid">
+          <article class="card">
+            <h3>Project A</h3>
+            <p>Short description. <a href="#">View</a></p>
+          </article>
+          <article class="card">
+            <h3>Project B</h3>
+            <p>Short description. <a href="#">View</a></p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="section">
+      <div class="container">
+        <h2>Contact</h2>
+        <p>Prefer email? <a href="mailto:you@example.com">you@example.com</a></p>
+        <form id="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
+          <label>
+            <span>Name</span>
+            <input name="name" required>
+          </label>
+          <label>
+            <span>Email</span>
+            <input name="email" type="email" required>
+          </label>
+          <label>
+            <span>Message</span>
+            <textarea name="message" rows="5" required></textarea>
+          </label>
+          <button class="btn" type="submit">Send</button>
+        </form>
+      </div>
+    </section>
   </main>
+
+  <footer class="site-footer">
+    <div class="container">
+      <p>&copy; <span id="year"></span> Shankar Gugoloth · <a href="https://github.com/gugolothshankar">GitHub</a></p>
+    </div>
+  </footer>
+
+  <script src="js/main.js"></script>
 </body>
 </html>
