--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Shankar Gugoloth — Personal</title>
-  <meta name="description" content="Shankar Gugoloth — software engineer. Projects, blog, and contact." />
+  <meta name="description" content="Shankar Gugoloth — PhD scholar. Projects, blog, and contact." />
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
