--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Shankar Gugoloth — Personal</title>
-  <meta name="description" content="Shankar Gugoloth — software engineer. Projects, blog, and contact." />
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <title>Shankar Gugoloth — Home</title>
+  <meta name="description" content="Shankar Gugoloth — Researcher, Teacher, Developer. Personal homepage." />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="site-header">
-    <div class="container">
-      <a class="brand" href="#home">Shankar Gugoloth</a>
-      <nav class="site-nav" aria-label="Primary">
+    <div class="wrap">
+      <h1 class="brand"><a href="#home">Shankar Gugoloth</a></h1>
+      <nav class="nav">
         <a href="#about">About</a>
+        <a href="#research">Research</a>
+        <a href="#teaching">Teaching</a>
+        <a href="#publications">Publications</a>
         <a href="#projects">Projects</a>
+        <a href="#cv">CV</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
@@ -23,64 +25,95 @@
 
   <main>
     <section id="home" class="hero">
-      <div class="container hero-inner">
-        <div class="hero-content">
-          <h1>Hi — I'm Shankar.</h1>
-          <p class="lead">Software engineer building web apps. I care about clean code, fast UI, and good UX.</p>
-          <p>
-            <a class="btn" href="#projects">See my work</a>
-            <a class="btn btn-outline" href="files/Shankar_Resume.pdf" target="_blank" rel="noopener">Resume</a>
+      <div class="wrap hero-inner">
+        <div class="hero-text">
+          <h2>Hi — I'm Shankar</h2>
+          <p class="lead">Researcher • Teacher • Software Developer</p>
+          <p>I work on [your research area]. Welcome to my homepage — find my work, publications, courses and contact information here.</p>
+          <p class="cta">
+            <a class="btn" href="#research">My Research</a>
+            <a class="btn ghost" href="assets/CV.pdf" target="_blank">Download CV</a>
           </p>
         </div>
-        <img class="hero-photo" src="images/profile.jpg" alt="Shankar Gugoloth photo" />
+        <div class="hero-photo">
+          <img src="assets/profile.jpg" alt="Shankar Gugoloth" />
+        </div>
       </div>
     </section>
 
     <section id="about" class="section">
-      <div class="container">
-        <h2>About</h2>
-        <p>Short bio — where you work, what you build, what tools you use (JavaScript, TypeScript, React, Node, etc.).</p>
+      <div class="wrap">
+        <h3>About</h3>
+        <p>Short biography: where you studied, current affiliation, research interests, and a brief career summary. Replace this text with your own.</p>
+      </div>
+    </section>
+
+    <section id="research" class="section alt">
+      <div class="wrap">
+        <h3>Research</h3>
+        <p>Describe your research focus, groups or labs, links to projects and datasets.</p>
+        <ul class="cards">
+          <li>
+            <h4>Project A</h4>
+            <p>Short description and link to repo/paper.</p>
+          </li>
+          <li>
+            <h4>Project B</h4>
+            <p>Short description and link to repo/paper.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="teaching" class="section">
+      <div class="wrap">
+        <h3>Teaching</h3>
+        <p>Courses you teach/ran, links to syllabus, lecture notes or videos.</p>
+      </div>
+    </section>
+
+    <section id="publications" class="section alt">
+      <div class="wrap">
+        <h3>Publications</h3>
+        <ol>
+          <li>Author, Title, Conference/Journal, Year. <a href="#">PDF</a></li>
+          <li>Author, Title, Conference/Journal, Year. <a href="#">PDF</a></li>
+        </ol>
       </div>
     </section>
 
     <section id="projects" class="section">
-      <div class="container">
-        <h2>Projects</h2>
-        <!-- JS will render project cards into this grid -->
-        <div id="projects-list" class="grid" aria-live="polite"></div>
+      <div class="wrap">
+        <h3>Projects</h3>
+        <p>Short highlights of selected projects with links to GitHub or pages.</p>
       </div>
     </section>
 
-    <section id="contact" class="section">
-      <div class="container">
-        <h2>Contact</h2>
-        <p>Prefer email? <a href="mailto:you@example.com">you@example.com</a></p>
-        <form id="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
-          <label>
-            <span>Name</span>
-            <input name="name" required>
-          </label>
-          <label>
-            <span>Email</span>
-            <input name="email" type="email" required>
-          </label>
-          <label>
-            <span>Message</span>
-            <textarea name="message" rows="5" required></textarea>
-          </label>
-          <button class="btn" type="submit">Send</button>
-        </form>
+    <section id="cv" class="section alt">
+      <div class="wrap">
+        <h3>CV</h3>
+        <p><a class="btn" href="assets/CV.pdf" target="_blank">Download CV (PDF)</a></p>
+      </div>
+    </section>
+
+    <section id="contact" class="section contact">
+      <div class="wrap">
+        <h3>Contact</h3>
+        <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+        <p>OR use social links: <a href="#" target="_blank">GitHub</a> • <a href="#" target="_blank">LinkedIn</a></p>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container">
-      <p>&copy; <span id="year"></span> Shankar Gugoloth · <a href="https://github.com/gugolothshankar">GitHub</a></p>
+    <div class="wrap">
+      <p>© <span id="year"></span> Shankar Gugoloth — Built with GitHub Pages</p>
     </div>
   </footer>
 
-  <script src="js/projects.js"></script>
-  <script src="js/main.js"></script>
+  <script>
+    // Set current year
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
